@@ -1,11 +1,9 @@
 package org.javacs;
 
-import java.io.File;
 import java.nio.file.*;
 import java.util.*;
 import java.util.logging.Logger;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import javax.tools.*;
 import org.javacs.lsp.SymbolInformation;
 import org.javacs.rewrite.*;
@@ -39,44 +37,6 @@ class JavaCompilerService implements CompilerProvider {
         this.docs = new Docs(docPath);
         this.classPathClasses = ScanClassPath.classPathTopLevelClasses(classPath);
         this.fileManager = new SourceFileManager();
-    }
-
-    /** Combine source path or class path entries using the system separator, for example ':' in unix */
-    private static String joinPath(Collection<Path> classOrSourcePath) {
-        return classOrSourcePath.stream().map(p -> p.toString()).collect(Collectors.joining(File.pathSeparator));
-    }
-
-    static List<String> options(Set<Path> classPath, Set<String> addExports) {
-        var list = new ArrayList<String>();
-
-        Collections.addAll(list, "-classpath", joinPath(classPath));
-        Collections.addAll(list, "--add-modules", "ALL-MODULE-PATH");
-        // Collections.addAll(list, "-verbose");
-        Collections.addAll(list, "-proc:none");
-        Collections.addAll(list, "-g");
-        // You would think we could do -Xlint:all,
-        // but some lints trigger fatal errors in the presence of parse errors
-        Collections.addAll(
-                list,
-                "-Xlint:cast",
-                "-Xlint:deprecation",
-                "-Xlint:empty",
-                "-Xlint:fallthrough",
-                "-Xlint:finally",
-                "-Xlint:path",
-                "-Xlint:unchecked",
-                "-Xlint:varargs",
-                "-Xlint:static");
-        for (var export : addExports) {
-            list.add("--add-exports");
-            list.add(export + "=ALL-UNNAMED");
-        }
-
-        return list;
-    }
-
-    Docs docs() {
-        return docs;
     }
 
     CompileBatch compileBatch(Collection<? extends JavaFileObject> sources) {
